--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Serlokas</title>
 </head>
+
 <body>
-    <img src="" alt="">
+    <img src="img/serlokas.jpg" alt="Serlokas ruko pypke">
+    <img src="/img/serlokas.jpg" alt="Serlokas ruko pypke">
+    <img src="./img/serlokas.jpg" alt="Serlokas ruko pypke">
+    <img src="../img/serlokas.jpg" alt="Serlokas ruko pypke">
+    <div>
+        <h1>404</h1>
+        <p>Bla bla bla, bliu bla bla</p>
+        <p>Bla bla bla, bliu bla bli</p>
+        <a href="#">Back home</a>
+    </div>
 </body>
 </html>
